--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="top">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud image">
+        <img class="top-cloud" src="cloud.png" alt="cloud image">
         <h1>I'm Tanmay.</h1>
         <h2 style="";>a <span class="pro">pro</span>grammer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud image">
         <img src="images/mountain.png" alt="mountain">
     </div>
     <div class="middle">
@@ -26,12 +26,12 @@
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="comp" src="images/computer.png" alt="computer">
+              <img class="comp" src="computer.png" alt="computer">
               <h3>Programming</h3>
               <p>I love to code ,solve problems and build things!I have been coding and learning various languages and skills for the past 5 years.</p>
             </div>
             <div class="skill-row">
-              <img class="write" src="images/book.png" alt="writing">
+              <img class="write" src="book.png" alt="writing">
               <h3>Writing</h3>
               <p>I'm something of a writer myself.I love to read and write on a variety of topics ranging from geo-politics to theology.</p>
             </div>
