--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="top">
         <img class="top-cloud" src="cloud.png" alt="cloud image">
         <h1>I'm Tanmay.</h1>
-        <h2 style="";>a <span class="pro">pro</span>grammer.</h2>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="cloud.png" alt="cloud image">
         <img src="images/mountain.png" alt="mountain">
     </div>
     <div class="middle">
         <div class="profile">
-            <img class = "pfp" src="images/pfp.png" alt="It's me :)">
+            <img class = "pfp" src="pfp.png" alt="It's me :)">
             <h2>Hello.</h2>
             <p class="intro">I'm Tanmay Sharma ,geek,coder and a caffiene dependent life form.</p>
           </div>
