--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>I'm Tanmay.</h1>
         <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="cloud.png" alt="cloud image">
-        <img src="images/mountain.png" alt="mountain">
+        <img src="mountain.png" alt="mountain">
     </div>
     <div class="middle">
         <div class="profile">
